--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="" />
     <title>채널평일 농장센터</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/waaa.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <style>
