--- a/index.html
+++ b/index.html
@@ -107,15 +107,15 @@
     <div class="table-container" id="table-container">
         <table>
             <thead>
-                <tr>
-                    <th>농장번호</th>
-                    <th>농장이름</th>
-                    <th>농장주 아카계정</th>
-                    <th>농장주인</th>
-                    <th>가입조건</th>
-                    <th>농장 소개</th>
-                </tr>
-            </thead>
+    <tr>
+        <th>농장번호</th>
+        <th>농장이름</th>
+        <th>농장주 아카계정</th>
+        <th>농장주 이름</th>
+        <th></th> <!-- 삼각형 아이콘 열 -->
+    </tr>
+</thead>
+
             <tbody id="table-body">
                 <!-- 데이터가 삽입될 부분 -->
             </tbody>
