--- a/index.html
+++ b/index.html
@@ -107,15 +107,14 @@
     <div class="table-container" id="table-container">
         <table>
             <thead>
-    <tr>
-        <th>농장번호</th>
-        <th>농장이름</th>
-        <th>농장주 아카계정</th>
-        <th>농장주 이름</th>
-        <th></th> <!-- 삼각형 아이콘 열 -->
-    </tr>
-</thead>
+                <tr>
+                    <th>농장번호</th>
+                    <th>농장이름</th>
+                    <th>농장주 아카계정</th>
+                    <th>농장주인</th>
 
+                </tr>
+            </thead>
             <tbody id="table-body">
                 <!-- 데이터가 삽입될 부분 -->
             </tbody>
@@ -136,11 +135,6 @@
             <p>Bootstrap v5.2.3 기반제작</p>
         </div>
     </div>
-<button onclick="scrollToTop()" id="scrollToTopBtn" style="position: fixed; bottom: 10px; right: 10px; display: none;">
-    ↑ 맨 위로
-</button>
-
-
 
 </body>
 </html>
