--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>채널평일 농장센터</title>
+    <title>트릭컬채널 평일농장센터</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/waaa.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -81,7 +81,7 @@
     <!-- Responsive navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">채널평일농장</a>
+            <a class="navbar-brand" href="#">트릭컬채널 평일농장</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -118,7 +118,7 @@
                     <th>농장이름</th>
                     <th>농장주 아카계정</th>
                     <th>농장주인</th>
-                    <th>더보기</th> <!-- 삼각형 아이콘 열 -->
+                    <th></th> <!-- 삼각형 아이콘 열 -->
                 </tr>
             </thead>
 
