--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <th>농장이름</th>
                     <th>농장주 아카계정</th>
                     <th>농장주인</th>
-                    <th></th> <!-- 삼각형 아이콘 열 -->
+                    <th>더보기</th> <!-- 삼각형 아이콘 열 -->
                 </tr>
             </thead>
 
